brat/test/golden/error/fanin-list.brat.golden
Error in test/golden/error/fanin-list.brat@2:5-13
f = { [\/] }
    ^^^^^^^^

  Type error: Fanin ([\/]) only applies to Vec

